--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,11 @@
     <title>Joseph Ye | Software Engineer</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Updated viewport meta tag to disable zooming -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -22,6 +26,13 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <!-- Inline CSS to prevent horizontal scrolling -->
+    <style>
+      html,
+      body {
+        overflow-x: hidden;
+      }
+    </style>
   </head>
   <body data-theme="light">
     <noscript>You need to enable JavaScript to run this app.</noscript>
